criando as páginas do cabecalho

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
-    <h1>Vinheiria Agnello </h1> 
-    <table class ="menu">
-    <th><a href="./pages/discover.html">descobrir</a>  |</th>
-    <th><a href="./pages/categorias.html">categorias</a>  |</th>
-    <th>  <a href="./pages/safras.html">safras</a>  |</th>
-    <th>  <a href="./pages/sobre.html">sobre nós</a>  |</th>
-    <th>  <a href="./pages/guia.html">conhecendo o mundo dos vinhos</a>  </th>
-<br><br>
+    <title>Vinheiria Agnello</title>
+    <table class="menu">
+        <th><a href="./pages/discover.html">descobrir</a> |</th>
+        <th><a href="./pages/categorias.html">categorias</a> |</th>
+        <th> <a href="./pages/safras.html">safras</a> |</th>
+        <th> <a href="./pages/sobre.html">sobre nós</a> |</th>
+        <th> <a href="./pages/guia.html">conhecendo o mundo dos vinhos</a> </th>
+        <br><br>
+        <main>
+            <h2>Sobre Nós</h2>
+            <p>Bem-vindo à nossa vinícola! Aqui você encontrará uma seleção dos melhores vinhos da região.</p>
+            <p>Nosso objetivo é proporcionar uma experiência única e inesquecível para todos os amantes de vinho.</p>
 
-    <h2>Sobre Nós</h2>
-    <p>Bem-vindo à nossa vinícola! Aqui você encontrará uma seleção dos melhores vinhos da região.</p>
-    <p>Nosso objetivo é proporcionar uma experiência única e inesquecível para todos os amantes de vinho.</p>
+            <ul>
+                <li>Mais de 15 anos de atuação no mercado de vinhos em São Paulo</li>
+                <li>Empresa familiar, dirigida por Giulio e sua filha Bianca</li>
+                <li>Paixão pelo mundo dos vinhos e dedicação ao atendimento próximo e humano.</li>
+                <li>Compromisso em levar a mesma experiência personalizada da loja física para o ambiente online.</li>
+                <li>Equipe especializada pronta para ajudar na escolha do vinho ideal para cada ocasião.</li>
+                <li>Vendedores altamente capacitados para orientar clientes sobre uvas, regiões, harmonizações e
+                    ocasiões</li>
+                <li>Armazenagem controlada para preservar a qualidade, aroma e sabor dos vinhos, especialmente os raros
+                    e de maior valor</li>
+            </ul>
+        </main>
+</body>
 
-    <ul>
-        <li>Mais de 15 anos de atuação no mercado de vinhos em São Paulo</li>
-        <li>Empresa familiar, dirigida por Giulio e sua filha Bianca</li>
-        <li>Paixão pelo mundo dos vinhos e dedicação ao atendimento próximo e humano.</li>
-        <li>Compromisso em levar a mesma experiência personalizada da loja física para o ambiente online.</li>
-        <li>Equipe especializada pronta para ajudar na escolha do vinho ideal para cada ocasião.</li>
-        <li>Vendedores altamente capacitados para orientar clientes sobre uvas, regiões, harmonizações e ocasiões</li>
-        <li>Armazenagem controlada para preservar a qualidade, aroma e sabor dos vinhos, especialmente os raros e de maior valor</li>
-    </ul>
-    </body>
 </html>
