--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vinheiria Agnello</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-   <img src="assets/imgs/logo2.png" alt="garrafa com líquido" height="60" width="40"><h1>Vinheiria Agnello </h1> 
+  <header>
+    <div class="logo-container">
+      <img src="assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
+      <h1>Vinheiria Agnello</h1>
+    </div>
+    <nav>
+      <a href="./pages/discover.html">Descobrir</a>
+      <a href="./pages/categorias.html">Categorias</a>
+      <a href="./pages/safras.html">Safras</a>
+      <a href="./pages/sobre.html">Sobre Nós</a>
+      <a href="./pages/discover.html">Guia de Vinhos</a>
+    </nav>
+  </header>
 
-   <nav><a href="./pages/discover.html">descobrir</a>  |  <a href="./pages/categorias.html">categorias</a>  |  <a href="./pages/safras.html">safras</a>  |  <a href="./pages/sobre.html">sobre nós</a>  |  <a href="./pages/guia.html">conhecendo o mundo dos vinhos</a></nav>
-  <br><br>
-   <a href="top5.html">top 5 vinhos</a>
-
-    </body>
+  <main>
+    <section>
+      <h2>Conheça nosso Top 5 melhores vinhos</h2>
+      <ol>
+        <li><a href="suave.html">Suave</a></li>
+        <li><a href="bordo.html">Bordo</a></li>
+        <li><a href="espumante.html">Espumante</a></li>
+        <li><a href="tinto.html">Tinto</a></li>
+        <li><a href="branco.html">Branco</a></li>
+      </ol>
+    </section>
+  </main>
+</body>
 </html>
