trabalhando nos links dos vinhos

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="./pages/safras.html">Safras</a>
       <a href="./pages/sobre.html">Sobre Nós</a>
       <a href="./pages/discover.html">Guia de Vinhos</a>
+      <a href="./pages/comprar.html">Comprar</a>
     </nav>
   </header>
 
@@ -25,11 +26,11 @@
     <section>
       <h2>Conheça nosso Top 5 melhores vinhos</h2>
       <ol>
-        <li><a href="suave.html">Suave</a></li>
-        <li><a href="bordo.html">Bordo</a></li>
-        <li><a href="espumante.html">Espumante</a></li>
-        <li><a href="tinto.html">Tinto</a></li>
-        <li><a href="branco.html">Branco</a></li>
+        <li><a href="./suave.html">Suave</a></li>
+        <li><a href="./pages/bordo.html">Bordo</a></li>
+        <li><a href="./pages/espumante.html">Espumante</a></li>
+        <li><a href="./pages/tinto.html">Tinto</a></li>
+        <li><a href="./pages/branco.html">Branco</a></li>
       </ol>
     </section>
   </main>
