--- a/pages/discover.html
+++ b/pages/discover.html
@@ -9,26 +9,31 @@
 </head>
 
 <body>
+
+
     <header>
         <div class="logo-container">
             <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
             <h1>Vinheiria Agnello</h1>
         </div>
         <nav>
-            <a href="../index.html">Descobrir</a>
-            <a href="./pages/categorias.html">Categorias</a>
-            <a href="./pages/safras.html">Safras</a>
-            <a href="./pages/sobre.html">Sobre Nós</a>
-            <a href="discover.html">Guia de Vinhos</a>
+            <a href="../index.html">inicio</a>
+            <a href="./categorias.html">Categorias</a>
+            <a href="./safras.html">Safras</a>
+            <a href="./sobre.html">Sobre Nós</a>
+            <a href="#">Guia de Vinhos</a>
+            <a href="./contatos.html">Comprar</a>
         </nav>
     </header>
+
+
     <main>
         <section>
 
-            <h2>conhecendo vinhos</h2>
+            <h2>Conhecendo Vinhos</h2>
         </section class="texto-destaque">
-    </main>
-    o que é vinho?
+    </main><section class="texto-destaque">
+    <h3>O que é vinho?</h3>
     <p>Vinho é uma bebida alcoólica feita a partir da fermentação do suco de uvas. Existem diversos tipos de vinhos,
         como tinto, branco, rosé, espumante, entre outros, cada um com suas características únicas de sabor, aroma e
         corpo.</p>
@@ -37,7 +42,7 @@
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </iframe>
+    </iframe></section>
 </body>
 
 </html>
