--- a/pages/safras.html
+++ b/pages/safras.html
@@ -10,21 +10,21 @@
 
 <body>
     <header>
-    <div class="logo-container">
-      <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
-      <h1>Vinheiria Agnello</h1>
-    </div>
-    <nav>
-  <a href="../pages/discover.html">Descobrir</a> |
-  <a href="../pages/categorias.html">Categorias</a> |
-  <a href="../pages/safras.html">Safras</a> |
-  <a href="../pages/sobre.html">Sobre Nós</a> |
-  <a href="../pages/guia.html">Guia de Vinhos</a> |
-  <a href="../index.html">Início</a>
-</nav>
+        <div class="logo-container">
+            <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
+            <h1>Vinheiria Agnello</h1>
+        </div>
+        <nav>
+            <a href="../index.html">inicio</a>
+            <a href="./pages/categorias.html">Categorias</a>
+            <a href="#">Safras</a>
+            <a href="./pages/sobre.html">Sobre Nós</a>
+            <a href="./discover.html">Guia de Vinhos</a>
+            <a href="./contatos.html">Comprar</a>
+        </nav>
     </header>
         <br><br>
-        <main>
+        <main><section class="texto-destaque">
             <h2>Safras</h2>
             <p>Em vinhos, "safra" refere-se ao ano em que as uvas foram colhidas para a produção do vinho. A safra é
                 importante porque as condições climáticas e ambientais de um determinado ano podem afetar significativamente
@@ -36,7 +36,7 @@
             <p>Os apreciadores de vinho muitas vezes prestam atenção às safras ao escolher vinhos, especialmente para vinhos
                 de alta qualidade ou vinhos de guarda, onde a safra pode influenciar o valor e a reputação do vinho ao longo
                 do tempo.</p>
-        </main>
+        </section></main>
 </body>
 
 </html>
