--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -9,13 +9,18 @@
 </head>
 
 <body>
-    <title>Vinheiria Agnello</title>
-    <table class="menu">
-        <th><a href="./pages/discover.html">descobrir</a> |</th>
-        <th><a href="./pages/categorias.html">categorias</a> |</th>
-        <th> <a href="./pages/safras.html">safras</a> |</th>
-        <th> <a href="./pages/sobre.html">sobre nós</a> |</th>
-        <th> <a href="./pages/guia.html">conhecendo o mundo dos vinhos</a> </th>
+    <header>
+     <div class="logo-container">
+            <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
+            <h1>Vinheiria Agnello</h1>
+        </div>
+   <nav>
+            <a href="../index.html">Descobrir</a>
+            <a href="./pages/categorias.html">Categorias</a>
+            <a href="./pages/safras.html">Safras</a>
+            <a href="#">Sobre Nós</a>
+            <a href="discover.html">Guia de Vinhos</a>
+        </nav></header>
         <br><br>
         <main>
             <h2>Sobre Nós</h2>
@@ -34,6 +39,8 @@
                     e de maior valor</li>
             </ul>
         </main>
+
+        
 </body>
 
 </html>
