--- a/pages/branco.html
+++ b/pages/branco.html
@@ -19,7 +19,7 @@
       <a href="./sobre.html">Sobre Nós</a>
       <a href="./discover.html">Descobrir</a>
       <a href="./guia.html">Guia de Vinhos</a>
-      <a href="./contatos.html">Comprar</a>
+      <a href="./comprar.html">Comprar</a>
     </nav>
   </header>
 
@@ -38,6 +38,9 @@
       </p>
       
     </section>
+    
   </main>
+    <footer>
+    <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
 </body>
 </html>
