--- a/pages/discover.html
+++ b/pages/discover.html
@@ -22,7 +22,7 @@
             <a href="./safras.html">Safras</a>
             <a href="./sobre.html">Sobre Nós</a>
             <a href="#">Guia de Vinhos</a>
-            <a href="./contatos.html">Comprar</a>
+            <a href="./comprar.html">Comprar</a>
         </nav>
     </header>
 
@@ -31,7 +31,7 @@
         <section>
 
             <h2>Conhecendo Vinhos</h2>
-        </section class="texto-destaque">
+        
     </main><section class="texto-destaque">
     <h3>O que é vinho?</h3>
     <p>Vinho é uma bebida alcoólica feita a partir da fermentação do suco de uvas. Existem diversos tipos de vinhos,
@@ -42,7 +42,10 @@
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </iframe></section>
+    </iframe></section></main>
+
+    <footer>
+        <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p></footer>
 </body>
 
 </html>
