--- a/pages/suave.html
+++ b/pages/suave.html
@@ -17,9 +17,8 @@
       <a href="./categorias.html">Categorias</a>
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
-      <a href="./discover.html">Descobrir</a>
-      <a href="./guia.html">Guia de Vinhos</a>
-      <a href="./contatos.html">Comprar</a>
+      <a href="./discover.html">Guia de Vinhos</a>
+      <a href="./comprar.html">Comprar</a>
     </nav>
   </header>
 
@@ -40,5 +39,8 @@
       </p>
     </section>
   </main>
+  <footer>
+    <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
