--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <!--header de modelo para todas as páginas, mas adaptado ao pages-->
   <header>
     <div class="logo-container">
       <img src="assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
       <h1>Vinheiria Agnello</h1>
     </div>
     <nav>
+      
       <a href="./pages/discover.html">Descobrir</a>
       <a href="./pages/categorias.html">Categorias</a>
       <a href="./pages/safras.html">Safras</a>
@@ -26,13 +28,21 @@
     <section>
       <h2>Conheça nosso Top 5 melhores vinhos</h2>
       <ol>
-        <li><a href="./suave.html">Suave</a></li>
+        <li><a href="./pages/suave.html">Suave</a></li>
         <li><a href="./pages/bordo.html">Bordo</a></li>
         <li><a href="./pages/espumante.html">Espumante</a></li>
         <li><a href="./pages/tinto.html">Tinto</a></li>
         <li><a href="./pages/branco.html">Branco</a></li>
       </ol>
+
+      <h2>está perdido?</h2>
+      <p>Não se preocupe! Separamos uma seçao. para quem quer comecar do mais completo zero! por favor acesse nosso <a href="./pages/discover.html" >Guia de Vinhos</a></p>
     </section>
   </main>
+
+  <!--footer de modelo -->
+  <footer>
+    <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
