--- a/pages/bordo.html
+++ b/pages/bordo.html
@@ -18,8 +18,8 @@
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
       <a href="./discover.html">Descobrir</a>
-      <a href="./guia.html">Guia de Vinhos</a>
-      <a href="./contatos.html">Comprar</a>
+      <a href="./discover.html">Guia de Vinhos</a>
+      <a href="./comprar.html">Comprar</a>
     </nav>
   </header>
 
@@ -39,6 +39,10 @@
         e afeto.
       </p>
     </section>
+    
   </main>
+  <footer>
+    <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
