--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -17,81 +17,94 @@
       <a href="./categorias.html">Categorias</a>
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
-      <a href="./discover.html">Descobrir</a>
-      <a href="./guia.html">Guia de Vinhos</a>
-      <a href="./contatos.html">Comprar</a>
+    
+      <a href="./discover.html">Guia de Vinhos</a>
+      <a href="#">Comprar</a>
     </nav>
   </header>
 
   <main>
     <section class="texto-destaque">
       <h2>Comprar Vinhos</h2>
-      <p>Preencha o formulário abaixo para reservar seu vinho favorito.</p>
-
-      <!-- TABELA DE VALORES -->
-      <h3>Valores dos Vinhos</h3>
-      <table border="1" cellpadding="8" cellspacing="0">
-        <thead>
-          <tr>
-            <th>Vinho</th>
-            <th>Tipo</th>
-            <th>Preço</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Suave</td>
-            <td>Tinto</td>
-            <td>R$ 45,00</td>
-          </tr>
-          <tr>
-            <td>Bordô</td>
-            <td>Tinto</td>
-            <td>R$ 50,00</td>
-          </tr>
-          <tr>
-            <td>Espumante</td>
-            <td>Branco</td>
-            <td>R$ 70,00</td>
-          </tr>
-          <tr>
-            <td>Tinto</td>
-            <td>Seco</td>
-            <td>R$ 60,00</td>
-          </tr>
-          <tr>
-            <td>Branco</td>
-            <td>Suave</td>
-            <td>R$ 55,00</td>
-          </tr>
-        </tbody>
-      </table>
-      <br>
-
-      <!-- FORMULÁRIO -->
-      <form action="#" method="">
-        <label for="nome">Nome:</label><br>
-        <input type="text" id="nome" name="nome" required><br><br>
-
-        <label for="telefone">Telefone:</label><br>
-        <input type="tel" id="telefone" name="telefone" required><br><br>
-
-        <label for="email">E-mail:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
-
-        <label for="vinho">Selecione seu vinho:</label><br>
-        <select id="vinho" name="vinho" required>
-          <option value="">-- Escolha --</option>
-          <option value="suave">Suave - R$ 45,00</option>
-          <option value="bordo">Bordô - R$ 50,00</option>
-          <option value="espumante">Espumante - R$ 70,00</option>
-          <option value="tinto">Tinto - R$ 60,00</option>
-          <option value="branco">Branco - R$ 55,00</option>
-        </select><br><br>
-
-        <button type="submit">Enviar Pedido</button>
-      </form>
+      <p>Confira os valores e preencha o formulário para reservar seu vinho favorito.</p>
     </section>
+
+    <div class="compra-container">
+      <!-- FORMULÁRIO -->
+      <div class="form-compras">
+        <fieldset><legend><h3>Formulário de Compra</h3></legend>
+        <form action="./confirma.html" method="get"">
+          <label for="nome">Nome:</label><br>
+          <input type="text" id="nome" name="nome" required><br><br>
+
+          <label for="telefone">Telefone:</label><br>
+          <input type="tel" id="telefone" name="telefone" required><br><br>
+
+          <label for="pagamento">Forma de pagamento:</label><br>
+          <input type="radio" id="pix" name="pagamento" value="pix" required>
+          <label for="pix">PIX</label><br>
+
+          <input type="radio" id="cartao" name="pagamento" value="cartao">
+          <label for="cartao">Cartão de Crédito</label><br>
+
+          <input type="radio" id="boleto" name="pagamento" value="boleto">
+          <label for="boleto">Boleto Bancário</label><br>
+
+          <input type="radio" id="paypal" name="pagamento" value="paypal">
+          <label for="paypal">PayPal</label><br><br>
+
+          <label for="email">E-mail:</label><br>
+          <input type="email" id="email" name="email" required><br><br>
+
+          <label for="vinho">Selecione seu vinho:</label><br>
+          <select id="vinho" name="vinho" required>
+            <option value="">-- Escolha --</option>
+            <option value="suave">Suave - R$ 45,00</option>
+            <option value="bordo">Bordô - R$ 50,00</option>
+            <option value="espumante">Espumante - R$ 70,00</option>
+            <option value="tinto">Tinto - R$ 60,00</option>
+            <option value="branco">Branco - R$ 55,00</option>
+            <option value="rose">Rosé - R$ 58,00</option>
+            <option value="porto">Vinho do Porto - R$ 95,00</option>
+            <option value="malbec">Malbec - R$ 75,00</option>
+            <option value="cabernet">Cabernet Sauvignon - R$ 80,00</option>
+            <option value="merlot">Merlot - R$ 70,00</option>
+          </select><br><br>
+
+          <button type="submit">Enviar Pedido</button>
+        </form></fieldset>
+      </div>
+
+      <!-- TABELA -->
+      <div class="tabela-vinhos">
+        <h3>Detalhes dos Vinhos</h3>
+        <table>
+          <thead>
+            <tr>
+              <th>Vinho</th>
+              <th>Tipo</th>
+              <th>Preço</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr><td>Suave</td><td>Tinto</td><td>R$ 45,00</td></tr>
+            <tr><td>Bordô</td><td>Tinto</td><td>R$ 50,00</td></tr>
+            <tr><td>Espumante</td><td>Branco</td><td>R$ 70,00</td></tr>
+            <tr><td>Tinto</td><td>Seco</td><td>R$ 60,00</td></tr>
+            <tr><td>Branco</td><td>Suave</td><td>R$ 55,00</td></tr>
+            <tr><td>Rosé</td><td>Leve</td><td>R$ 58,00</td></tr>
+            <tr><td>Vinho do Porto</td><td>Fortificado</td><td>R$ 95,00</td></tr>
+            <tr><td>Malbec</td><td>Tinto</td><td>R$ 75,00</td></tr>
+            <tr><td>Cabernet Sauvignon</td><td>Tinto</td><td>R$ 80,00</td></tr>
+            <tr><td>Merlot</td><td>Tinto</td><td>R$ 70,00</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </main>
+
+  <footer>
+    <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
