--- a/pages/espumante.html
+++ b/pages/espumante.html
@@ -17,9 +17,8 @@
       <a href="./categorias.html">Categorias</a>
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
-      <a href="./discover.html">Descobrir</a>
-      <a href="./guia.html">Guia de Vinhos</a>
-      <a href="./contatos.html">Comprar</a>
+      <a href="./discover.html">Guia de Vinhos</a>
+      <a href="./comprar.html">Comprar</a>
     </nav>
   </header>
 
@@ -36,13 +35,14 @@
         sabor, desde os mais secos até os mais doces. Harmoniza bem com aperitivos,
         frutos do mar e pratos leves, sendo uma opção versátil para diferentes paladares.
       </p>
-    </section>
-  </main>
-</body>
+    
 </html>
 
     
     </section>
   </main>
+  <footer>
+    <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
