--- a/pages/safras.html
+++ b/pages/safras.html
@@ -16,11 +16,11 @@
         </div>
         <nav>
             <a href="../index.html">inicio</a>
-            <a href="./pages/categorias.html">Categorias</a>
+            <a href="./categorias.html">Categorias</a>
             <a href="#">Safras</a>
-            <a href="./pages/sobre.html">Sobre Nós</a>
+            <a href="./sobre.html">Sobre Nós</a>
             <a href="./discover.html">Guia de Vinhos</a>
-            <a href="./contatos.html">Comprar</a>
+            <a href="./comprar.html">Comprar</a>
         </nav>
     </header>
         <br><br>
@@ -37,6 +37,9 @@
                 de alta qualidade ou vinhos de guarda, onde a safra pode influenciar o valor e a reputação do vinho ao longo
                 do tempo.</p>
         </section></main>
+        <footer>
+    <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
+  </footer>
 </body>
 
 </html>
