--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -16,13 +16,14 @@
         </div>
    <nav>
             <a href="../index.html">Descobrir</a>
-            <a href="./pages/categorias.html">Categorias</a>
-            <a href="./pages/safras.html">Safras</a>
+            <a href="./categorias.html">Categorias</a>
+            <a href="./safras.html">Safras</a>
             <a href="#">Sobre Nós</a>
             <a href="discover.html">Guia de Vinhos</a>
+            <a href="./comprar.html">Comprar</a>
         </nav></header>
         <br><br>
-        <main>
+        <main><section class="texto-destaque">
             <h2>Sobre Nós</h2>
             <p>Bem-vindo à nossa vinícola! Aqui você encontrará uma seleção dos melhores vinhos da região.</p>
             <p>Nosso objetivo é proporcionar uma experiência única e inesquecível para todos os amantes de vinho.</p>
@@ -37,9 +38,11 @@
                     ocasiões</li>
                 <li>Armazenagem controlada para preservar a qualidade, aroma e sabor dos vinhos, especialmente os raros
                     e de maior valor</li>
-            </ul>
+            </ul></section>
         </main>
-
+<footer>
+    <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
+  </footer>
         
 </body>
 
