--- a/pages/bordo.html
+++ b/pages/bordo.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta description="Vinheiria Agnello - uma seleção especial de vinhos tintos, brancos, rosés e espumantes.">
   <title>Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -38,6 +39,7 @@
         vinícola de muitas famílias produtoras, sendo uma escolha cheia de história
         e afeto.
       </p>
+      
     </section>
     
   </main>
