--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -38,7 +38,15 @@
                     ocasiões</li>
                 <li>Armazenagem controlada para preservar a qualidade, aroma e sabor dos vinhos, especialmente os raros
                     e de maior valor</li>
-            </ul></section>
+            </ul>
+        
+        <img src="../assets/imgs/Adega.jpeg" alt="foto de uma adega de vinhos"  class="img">
+        <img src="../assets/adega-7.jpg" alt="foto de outra adega de vinhos"  class="img">
+
+            <p>Explore nosso site para conhecer nossa seleção de vinhos, dicas de harmonização e eventos especiais.
+                Estamos aqui para ajudar você a descobrir o vinho perfeito para cada momento.</p>
+            <p>Obrigado por escolher nossa vinícola. Saúde!</p>
+        </section>
         </main>
 <footer>
     <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
