--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Vinheiria Agnello - uma seleção especial de vinhos tintos, brancos, rosés e espumantes.">
   <title>Vinheiria Agnello</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -35,7 +36,7 @@
         <li><a href="./pages/branco.html">Branco</a></li>
       </ol>
 
-      <h2>está perdido?</h2>
+      <h2>Está perdido?</h2>
       <p>Não se preocupe! Separamos uma seçao. para quem quer comecar do mais completo zero! por favor acesse nosso <a href="./pages/discover.html" >Guia de Vinhos</a></p>
     </section>
   </main>
