--- a/pages/discover.html
+++ b/pages/discover.html
@@ -37,7 +37,7 @@
     <p>Vinho é uma bebida alcoólica feita a partir da fermentação do suco de uvas. Existem diversos tipos de vinhos,
         como tinto, branco, rosé, espumante, entre outros, cada um com suas características únicas de sabor, aroma e
         corpo.</p>
-    <p>recomendamos fortemente que assista este vídeo:</p>
+    <p>Recomendamos fortemente que assista este vídeo:</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Ac559iPwbEs?si=ajiRNCWd-pq-7wab"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
