--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -33,7 +33,7 @@
       <!-- FORMULÁRIO -->
       <div class="form-compras">
         <fieldset><legend><h3>Formulário de Compra</h3></legend>
-        <form action="./confirma.html" method="get"">
+        <form action="./confirma.html" method="post"> <!--post por seguranca, são dados sensiveisgit  -->
           <label for="nome">Nome:</label><br>
           <input type="text" id="nome" name="nome" required><br><br>
 
