--- a/pages/tinto.html
+++ b/pages/tinto.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
   <header>
     <div class="logo-container">
@@ -17,6 +19,7 @@
       <a href="./categorias.html">Categorias</a>
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
+      <a href="./harmonizacao.html">Harmonização</a>
       <a href="./discover.html">Guia de Vinhos</a>
       <a href="./comprar.html">Comprar</a>
     </nav>
@@ -26,21 +29,22 @@
     <section class="texto-destaque">
       <h2>Vinho Tinto</h2>
       <p>
-    O vinho tinto é um dos mais apreciados no mundo, conhecido por sua cor rubi intensa,
-    taninos marcantes e aromas que podem variar de frutas vermelhas frescas a notas
-    amadeiradas, dependendo da uva e do processo de envelhecimento. Ele é resultado da
-    fermentação das uvas junto com as cascas, o que garante sua cor profunda e caráter robusto.
-  </p>
-  <p>
-    Versátil, o tinto pode ser degustado em diferentes momentos: desde encontros
-    descontraídos até ocasiões especiais. Harmoniza bem com carnes vermelhas, queijos
-    curados e massas com molhos encorpados. Cada safra e cada variedade de uva revelam
-    novas nuances, fazendo do vinho tinto uma escolha clássica e inesquecível.
-  </p>
+        O vinho tinto é um dos mais apreciados no mundo, conhecido por sua cor rubi intensa,
+        taninos marcantes e aromas que podem variar de frutas vermelhas frescas a notas
+        amadeiradas, dependendo da uva e do processo de envelhecimento. Ele é resultado da
+        fermentação das uvas junto com as cascas, o que garante sua cor profunda e caráter robusto.
+      </p>
+      <p>
+        Versátil, o tinto pode ser degustado em diferentes momentos: desde encontros
+        descontraídos até ocasiões especiais. Harmoniza bem com carnes vermelhas, queijos
+        curados e massas com molhos encorpados. Cada safra e cada variedade de uva revelam
+        novas nuances, fazendo do vinho tinto uma escolha clássica e inesquecível.
+      </p>
     </section>
   </main>
   <footer>
     <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
   </footer>
 </body>
+
 </html>
