--- a/pages/bordo.html
+++ b/pages/bordo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,24 @@
   <title>Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
   <header>
-    <div class="logo-container">
-      <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
-      <h1>Vinheiria Agnello</h1>
-    </div>
+    <a href="../index.html" class="link-container">
+      <div class="logo-container">
+
+        <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
+        <h1>Vinheiria Agnello</h1>
+
+      </div>
+    </a>
     <nav>
       <a href="../index.html">Início</a>
       <a href="./categorias.html">Categorias</a>
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
       <a href="./discover.html">Descobrir</a>
+      <a href="./harmonizacao.html">Harmonização</a>
       <a href="./discover.html">Guia de Vinhos</a>
       <a href="./comprar.html">Comprar</a>
     </nav>
@@ -39,12 +46,13 @@
         vinícola de muitas famílias produtoras, sendo uma escolha cheia de história
         e afeto.
       </p>
-      
+
     </section>
-    
+
   </main>
   <footer>
     <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
   </footer>
 </body>
+
 </html>
