--- a/pages/branco.html
+++ b/pages/branco.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
   <header>
-    <div class="logo-container">
-      <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
-      <h1>Vinheiria Agnello</h1>
-    </div>
+    <a href="../index.html" class="link-container">
+      <div class="logo-container">
+
+        <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
+        <h1>Vinheiria Agnello</h1>
+
+      </div>
+    </a>
     <nav>
       <a href="../index.html">Início</a>
       <a href="./categorias.html">Categorias</a>
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
       <a href="./discover.html">Descobrir</a>
+      <a href="./harmonizacao.html">Harmonização</a>
       <a href="./guia.html">Guia de Vinhos</a>
       <a href="./comprar.html">Comprar</a>
     </nav>
@@ -36,11 +43,12 @@
         sabor, desde os mais secos até os mais doces. Harmoniza bem com aperitivos,
         frutos do mar e pratos leves, sendo uma opção versátil para diferentes paladares.
       </p>
-      
+
     </section>
-    
+
   </main>
-    <footer>
+  <footer>
     <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
 </body>
+
 </html>
