--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comprar - Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
-  <header>
-    <div class="logo-container">
-      <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
-      <h1>Vinheiria Agnello</h1>
-    </div>
+  <header> <a href="../index.html" class="link-container">
+      <div class="logo-container">
+
+        <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
+        <h1>Vinheiria Agnello</h1>
+
+      </div>
+    </a>
     <nav>
       <a href="../index.html">Início</a>
       <a href="./categorias.html">Categorias</a>
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
-    
+      <a href="./harmonizacao.html">Harmonização</a>
       <a href="./discover.html">Guia de Vinhos</a>
       <a href="#">Comprar</a>
     </nav>
@@ -32,47 +37,51 @@
     <div class="compra-container">
       <!-- FORMULÁRIO -->
       <div class="form-compras">
-        <fieldset><legend><h3>Formulário de Compra</h3></legend>
-        <form action="./confirma.html" method="post"> <!--post por seguranca, são dados sensiveisgit  -->
-          <label for="nome">Nome:</label><br>
-          <input type="text" id="nome" name="nome" required><br><br>
+        <fieldset>
+          <legend>
+            <h3>Formulário de Compra</h3>
+          </legend>
+          <form action="./confirma.html" method="post"> <!--post por seguranca, são dados sensiveisgit  -->
+            <label for="nome">Nome:</label><br>
+            <input type="text" id="nome" name="nome" required><br><br>
 
-          <label for="telefone">Telefone:</label><br>
-          <input type="tel" id="telefone" name="telefone" required><br><br>
+            <label for="telefone">Telefone:</label><br>
+            <input type="tel" id="telefone" name="telefone" required><br><br>
 
-          <label for="pagamento">Forma de pagamento:</label><br>
-          <input type="radio" id="pix" name="pagamento" value="pix" required>
-          <label for="pix">PIX</label><br>
+            <label for="pagamento">Forma de pagamento:</label><br>
+            <input type="radio" id="pix" name="pagamento" value="pix" required>
+            <label for="pix">PIX</label><br>
 
-          <input type="radio" id="cartao" name="pagamento" value="cartao">
-          <label for="cartao">Cartão de Crédito</label><br>
+            <input type="radio" id="cartao" name="pagamento" value="cartao">
+            <label for="cartao">Cartão de Crédito</label><br>
 
-          <input type="radio" id="boleto" name="pagamento" value="boleto">
-          <label for="boleto">Boleto Bancário</label><br>
+            <input type="radio" id="boleto" name="pagamento" value="boleto">
+            <label for="boleto">Boleto Bancário</label><br>
 
-          <input type="radio" id="paypal" name="pagamento" value="paypal">
-          <label for="paypal">PayPal</label><br><br>
+            <input type="radio" id="paypal" name="pagamento" value="paypal">
+            <label for="paypal">PayPal</label><br><br>
 
-          <label for="email">E-mail:</label><br>
-          <input type="email" id="email" name="email" required><br><br>
+            <label for="email">E-mail:</label><br>
+            <input type="email" id="email" name="email" required><br><br>
 
-          <label for="vinho">Selecione seu vinho:</label><br>
-          <select id="vinho" name="vinho" required>
-            <option value="">-- Escolha --</option>
-            <option value="suave">Suave - R$ 45,00</option>
-            <option value="bordo">Bordô - R$ 50,00</option>
-            <option value="espumante">Espumante - R$ 70,00</option>
-            <option value="tinto">Tinto - R$ 60,00</option>
-            <option value="branco">Branco - R$ 55,00</option>
-            <option value="rose">Rosé - R$ 58,00</option>
-            <option value="porto">Vinho do Porto - R$ 95,00</option>
-            <option value="malbec">Malbec - R$ 75,00</option>
-            <option value="cabernet">Cabernet Sauvignon - R$ 80,00</option>
-            <option value="merlot">Merlot - R$ 70,00</option>
-          </select><br><br>
+            <label for="vinho">Selecione seu vinho:</label><br>
+            <select id="vinho" name="vinho" required>
+              <option value="">-- Escolha --</option>
+              <option value="suave">Suave - R$ 45,00</option>
+              <option value="bordo">Bordô - R$ 50,00</option>
+              <option value="espumante">Espumante - R$ 70,00</option>
+              <option value="tinto">Tinto - R$ 60,00</option>
+              <option value="branco">Branco - R$ 55,00</option>
+              <option value="rose">Rosé - R$ 58,00</option>
+              <option value="porto">Vinho do Porto - R$ 95,00</option>
+              <option value="malbec">Malbec - R$ 75,00</option>
+              <option value="cabernet">Cabernet Sauvignon - R$ 80,00</option>
+              <option value="merlot">Merlot - R$ 70,00</option>
+            </select><br><br>
 
-          <button type="submit">Enviar Pedido</button>
-        </form></fieldset>
+            <button type="submit">Enviar Pedido</button>
+          </form>
+        </fieldset>
       </div>
 
       <!-- TABELA -->
@@ -87,24 +96,65 @@
             </tr>
           </thead>
           <tbody>
-            <tr><td>Suave</td><td>Tinto</td><td>R$ 45,00</td></tr>
-            <tr><td>Bordô</td><td>Tinto</td><td>R$ 50,00</td></tr>
-            <tr><td>Espumante</td><td>Branco</td><td>R$ 70,00</td></tr>
-            <tr><td>Tinto</td><td>Seco</td><td>R$ 60,00</td></tr>
-            <tr><td>Branco</td><td>Suave</td><td>R$ 55,00</td></tr>
-            <tr><td>Rosé</td><td>Leve</td><td>R$ 58,00</td></tr>
-            <tr><td>Vinho do Porto</td><td>Fortificado</td><td>R$ 95,00</td></tr>
-            <tr><td>Malbec</td><td>Tinto</td><td>R$ 75,00</td></tr>
-            <tr><td>Cabernet Sauvignon</td><td>Tinto</td><td>R$ 80,00</td></tr>
-            <tr><td>Merlot</td><td>Tinto</td><td>R$ 70,00</td></tr>
+            <tr>
+              <td>Suave</td>
+              <td>Tinto</td>
+              <td>R$ 45,00</td>
+            </tr>
+            <tr>
+              <td>Bordô</td>
+              <td>Tinto</td>
+              <td>R$ 50,00</td>
+            </tr>
+            <tr>
+              <td>Espumante</td>
+              <td>Branco</td>
+              <td>R$ 70,00</td>
+            </tr>
+            <tr>
+              <td>Tinto</td>
+              <td>Seco</td>
+              <td>R$ 60,00</td>
+            </tr>
+            <tr>
+              <td>Branco</td>
+              <td>Suave</td>
+              <td>R$ 55,00</td>
+            </tr>
+            <tr>
+              <td>Rosé</td>
+              <td>Leve</td>
+              <td>R$ 58,00</td>
+            </tr>
+            <tr>
+              <td>Vinho do Porto</td>
+              <td>Fortificado</td>
+              <td>R$ 95,00</td>
+            </tr>
+            <tr>
+              <td>Malbec</td>
+              <td>Tinto</td>
+              <td>R$ 75,00</td>
+            </tr>
+            <tr>
+              <td>Cabernet Sauvignon</td>
+              <td>Tinto</td>
+              <td>R$ 80,00</td>
+            </tr>
+            <tr>
+              <td>Merlot</td>
+              <td>Tinto</td>
+              <td>R$ 70,00</td>
+            </tr>
           </tbody>
         </table>
       </div>
     </div>
   </main>
-
+<br><br><br>
   <footer>
     <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
   </footer>
 </body>
+
 </html>
