--- a/pages/discover.html
+++ b/pages/discover.html
@@ -12,15 +12,19 @@
 
 
     <header>
-        <div class="logo-container">
-            <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
-            <h1>Vinheiria Agnello</h1>
-        </div>
+        <a href="../index.html" class="link-container">
+      <div class="logo-container">
+
+        <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
+        <h1>Vinheiria Agnello</h1>
+
+      </div>
         <nav>
             <a href="../index.html">inicio</a>
             <a href="./categorias.html">Categorias</a>
             <a href="./safras.html">Safras</a>
             <a href="./sobre.html">Sobre Nós</a>
+            <a href="./harmonizacao.html">Harmonização</a>
             <a href="#">Guia de Vinhos</a>
             <a href="./comprar.html">Comprar</a>
         </nav>
