--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="./pages/categorias.html">Categorias</a>
       <a href="./pages/safras.html">Safras</a>
       <a href="./pages/sobre.html">Sobre Nós</a>
+      <a href="./pages/harmonizacao.html">Harmonização</a>
       <a href="./pages/discover.html">Guia de Vinhos</a>
       <a href="./pages/comprar.html">Comprar</a>
     </nav>
