--- a/pages/discover.html
+++ b/pages/discover.html
@@ -29,14 +29,9 @@
             <a href="./comprar.html">Comprar</a>
         </nav>
     </header>
-
-
     <main>
-        <section>
-
-            <h2>Conhecendo Vinhos</h2>
-        
-    </main><section class="texto-destaque">
+        <section></main><section class="texto-destaque">
+        <h2>Conhecendo Vinhos</h2>
     <h3>O que é vinho?</h3>
     <p>Vinho é uma bebida alcoólica feita a partir da fermentação do suco de uvas. Existem diversos tipos de vinhos,
         como tinto, branco, rosé, espumante, entre outros, cada um com suas características únicas de sabor, aroma e
