--- a/pages/harmonizacao.html
+++ b/pages/harmonizacao.html
@@ -19,7 +19,7 @@
       <a href="./sobre.html">Sobre Nós</a>
       <a href="./discover.html">Descobrir</a>
       <a href="./harmonizacao.html">Harmonização</a>
-      <a href="./guia.html">Guia de Vinhos</a>
+      <a href="./discover.html">Guia de Vinhos</a>
       <a href="./comprar.html">Comprar</a>
     </nav>
   </header>
