--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -46,7 +46,7 @@
                 <li>Armazenagem controlada para preservar a qualidade, aroma e sabor dos vinhos, especialmente os raros
                     e de maior valor</li>
             </ul>
-
+            <h3>conheca nosso armazenamento:   </h3>
             <img src="../assets/imgs/Adega.jpeg" alt="foto de uma adega de vinhos" class="img">
             <img src="../assets/adega-7.jpg" alt="foto de outra adega de vinhos" class="img">
 
