--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -41,7 +41,7 @@
           <legend>
             <h3>Formulário de Compra</h3>
           </legend>
-          <form action="./confirma.html" method="post"> <!--post por seguranca, são dados sensiveisgit  -->
+          <form action="./confirma.html" method="get">
             <label for="nome">Nome:</label><br>
             <input type="text" id="nome" name="nome" required><br><br>
 
@@ -49,7 +49,7 @@
             <input type="tel" id="telefone" name="telefone" required><br><br>
 
             <label for="pagamento">Forma de pagamento:</label><br>
-            <input type="radio" id="pix" name="pagamento" value="pix" required>
+            <input type="radio" id="pix" name="pagamento" value="pix" >
             <label for="pix">PIX</label><br>
 
             <input type="radio" id="cartao" name="pagamento" value="cartao">
