--- a/index.html
+++ b/index.html
@@ -25,21 +25,40 @@
       <a href="./pages/comprar.html">Comprar</a>
     </nav>
   </header>
-
   <main>
-    <section>
-      <h2>Conheça nosso Top 5 melhores vinhos</h2>
-      <ol>
-        <li><a href="./pages/suave.html">Suave</a></li>
-        <li><a href="./pages/bordo.html">Bordo</a></li>
-        <li><a href="./pages/espumante.html">Espumante</a></li>
-        <li><a href="./pages/tinto.html">Tinto</a></li>
-        <li><a href="./pages/branco.html">Branco</a></li>
-      </ol>
+    <section class="texto-destaque">
+      <h3>Conheça nosso Top 5 melhores vinhos (escolhidos a dedo pelo sommelier)</h3>
+  
 
-      <h2>Está perdido?</h2>
-      <p>Não se preocupe! Separamos uma seçao. para quem quer comecar do mais completo zero! por favor acesse nosso <a href="./pages/discover.html" >Guia de Vinhos</a></p>
-    </section>
+  <table class="carrossel">
+    <tr>
+      <td>
+        <img src="./assets/imgs/suave3.png" alt="Vinho Suave" class="img"><br>
+        <span class="item-titulo"><a href="./pages/suave.html">1- Suave</a></span>
+      </td>
+      <td>
+        <img src="./assets/imgs/bordo.png" alt="Vinho Bordô"class="img"><br>
+        <span class="item-titulo"><a href="./pages/bordo.html">2- Bordô</a></span>
+      </td>
+      <td>
+        <img src="./assets/imgs/espumante.png" alt="Vinho Espumante" class="img"><br>
+        <span class="item-titulo"><a href="./pages/espumante.html">3- Espumante</a></span>
+      </td>
+      <td>
+        <img src="./assets/imgs/tinto.jpg" alt="Vinho Tinto" class="img"><br>
+        <span class="item-titulo"><a href="./pages/tinto.html">4- Tinto</a></span>
+      </td>
+      <td>
+        <img src="./assets/imgs/branco.png" alt="Vinho Branco" class="img"><br>
+        <span class="item-titulo"><a href="./pages/branco.html">5- Branco</a></span>
+      </td>
+    </tr>
+  </table>
+
+  <h3>Está perdido?</h3>
+  Não se preocupe! Separamos uma seção para quem quer começar do mais completo zero! Por favor, acesse nosso <a href="./pages/discover.html">Guia de Vinhos</a>.
+
+</section>
   </main>
 
   <!--footer de modelo -->
