add meta tags in all pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Vinheiria Agnello - uma seleção especial de vinhos tintos, brancos, rosés e espumantes.">
+  <meta name="description" content="Conheça a Vinheria Agnello e descubra nosso Top 5 vinhos escolhidos pelo sommelier. Vinhos tintos, brancos e espumantes com qualidade garantida.">
+  <meta name="keywords" content="vinhos, loja de vinhos, vinhos online, vinhos tintos, vinhos brancos, espumantes, harmonização de vinhos, Vinheria Agnello">
+  <meta name="author" content="Vinheria Agnello">
   <title>Vinheiria Agnello</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
