--- a/pages/bordo.html
+++ b/pages/bordo.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta description="Vinheiria Agnello - uma seleção especial de vinhos tintos, brancos, rosés e espumantes.">
+  <meta name="description" content="Vinho Bordô: tradição brasileira, sabor intenso, aromas frutados e toque adocicado. Ideal para massas leves, pratos do dia a dia e sobremesas com frutas.">
+  <meta name="keywords" content="vinho bordô, vinho brasileiro, vinho tinto bordô, uva isabel, vinho doce, vinho frutado, vinhos tradicionais do Brasil">
+
   <title>Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -24,7 +26,7 @@
       <a href="./categorias.html">Categorias</a>
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
-      <a href="./discover.html">Descobrir</a>
+      
       <a href="./harmonizacao.html">Harmonização</a>
       <a href="./discover.html">Guia de Vinhos</a>
       <a href="./comprar.html">Comprar</a>
