--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Explore nossas categorias de vinhos: tintos, brancos, espumantes, suaves e mais. Encontre o estilo ideal para cada ocasião.">
+  <meta name="keywords" content="categorias de vinhos, tipos de vinho, vinhos tintos, vinhos brancos, espumantes, vinhos suaves, escolha de vinhos">
+
   <title>Categorias - Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -21,8 +24,7 @@
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
       <a href="./discover.html">Descobrir</a>
-      <a href="./harmonizacao.html">Harmonização</a>
-      <a href="./guia.html">Guia de Vinhos</a>
+      <a href="./discover.html">Guia de Vinhos</a>
       <a href="./comprar.html">Comprar</a>
     </nav>
   </header>
