--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Compre vinhos online com segurança. Formas de pagamento variadas e seleção especial da Vinheria Agnello.">
+  <meta name="keywords" content="comprar vinhos online, loja de vinhos, vinhos brasileiros, comprar vinho tinto, comprar vinho branco, vinhos espumantes">
+
   <title>Comprar - Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
