--- a/pages/espumante.html
+++ b/pages/espumante.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Espumante elegante e refrescante, perfeito para comemorações, brindes e ocasiões especiais. Combina frescor, leveza e sofisticação.">
+  <meta name="keywords" content="espumante, vinho espumante, champanhe, celebrações, vinhos para festa, vinhos especiais, brindes">
+
   <title>Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
