--- a/pages/harmonizacao.html
+++ b/pages/harmonizacao.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tabela de Harmonização - Vinheiria Agnello</title>
+  <meta name="description" content="Descubra como harmonizar vinhos com diferentes pratos. Dicas práticas para realçar sabores e criar experiências gastronômicas únicas.">
+  <meta name="keywords" content="harmonização de vinhos, vinho com carne, vinho com queijo, vinho e massas, vinho e sobremesas, dicas de harmonização">
+
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -17,7 +20,6 @@
       <a href="./categorias.html">Categorias</a>
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
-      <a href="./discover.html">Descobrir</a>
       <a href="./harmonizacao.html">Harmonização</a>
       <a href="./discover.html">Guia de Vinhos</a>
       <a href="./comprar.html">Comprar</a>
