--- a/pages/safras.html
+++ b/pages/safras.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conheça as melhores safras de vinhos e entenda como o ano de colheita influencia sabor, aroma e qualidade da bebida.">
+    <meta name="keywords" content="safras de vinho, colheita de uvas, vinhos safras, melhores safras, vinhos premiados, ano da colheita">
+
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -20,7 +23,7 @@
         <nav>
             
             <a href="./categorias.html">Categorias</a>
-            <a href="#">Safras</a>
+            <a href="./safras.html">Safras</a>
             <a href="./sobre.html">Sobre Nós</a>
             <a href="./harmonizacao.html">Harmonização</a>
             <a href="./discover.html">Guia de Vinhos</a>
