--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Saiba mais sobre a Vinheria Agnello: tradição familiar, paixão pelo vinho e compromisso com qualidade e atendimento humano.">
+    <meta name="keywords" content="sobre vinheria agnello, história da vinheria, loja de vinhos, tradição em vinhos, vinhos de qualidade, vinhos familiares">
+
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -23,8 +26,7 @@
                 <a href="./safras.html">Safras</a>
                 <a href="#">Sobre Nós</a>
                 <a href="./harmonizacao.html">Harmonização</a>
-                <a href="discover.html">Guia de Vinhos</a>
-                
+                <a href="discover.html">Guia de Vinhos<
                 <a href="./comprar.html">Comprar</a>
             </nav>
     </header>
