--- a/pages/suave.html
+++ b/pages/suave.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Vinho Suave: sabor leve, adocicado e aromático. Ideal para encontros descontraídos, refeições leves e quem está começando no mundo do vinho.">
+  <meta name="keywords" content="vinho suave, vinho leve, vinho doce, vinho tinto suave, vinhos para iniciantes, vinhos fáceis de beber">
+
   <title>Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
