--- a/pages/tinto.html
+++ b/pages/tinto.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Vinho Tinto: encorpado, seco e marcante. Combina com carnes, massas e pratos intensos. Uma escolha clássica para apreciadores de vinho.">
+  <meta name="keywords" content="vinho tinto, vinho seco, vinho encorpado, harmonização com carnes, vinho clássico, vinhos fortes">
+
   <title>Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
