--- a/pages/branco.html
+++ b/pages/branco.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Vinho Branco: fresco, aromático e suave. Excelente opção para dias quentes, frutos do mar, queijos leves e pratos delicados.">
+  <meta name="keywords" content="vinho branco, vinho suave, vinho fresco, harmonização frutos do mar, vinhos leves, vinhos aromáticos">
+
   <title>Vinheiria Agnello</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -23,9 +26,8 @@
       <a href="./categorias.html">Categorias</a>
       <a href="./safras.html">Safras</a>
       <a href="./sobre.html">Sobre Nós</a>
-      <a href="./discover.html">Descobrir</a>
       <a href="./harmonizacao.html">Harmonização</a>
-      <a href="./guia.html">Guia de Vinhos</a>
+      <a href="./discover.html">Guia de Vinhos</a>
       <a href="./comprar.html">Comprar</a>
     </nav>
   </header>
