--- a/pages/discover.html
+++ b/pages/discover.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubra o universo do vinho: tipos, características e curiosidades. Guia ideal para quem deseja aprender e apreciar com mais conhecimento.">
+    <meta name="keywords" content="descobrir vinhos, guia de vinhos, tipos de vinho, aprender sobre vinho, iniciantes no vinho, curiosidades sobre vinhos">
+
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -25,7 +28,7 @@
             <a href="./safras.html">Safras</a>
             <a href="./sobre.html">Sobre Nós</a>
             <a href="./harmonizacao.html">Harmonização</a>
-            <a href="#">Guia de Vinhos</a>
+            <a href="./discover.html">Guia de Vinhos</a>
             <a href="./comprar.html">Comprar</a>
         </nav>
     </header>
