linkando as imagens

--- a/index.html
+++ b/index.html
@@ -35,24 +35,25 @@
   <table class="carrossel">
     <tr>
       <td>
-        <img src="./assets/imgs/suave3.png" alt="Vinho Suave" class="img"><br>
-        <span class="item-titulo"><a href="./pages/suave.html">1- Suave</a></span>
+        <a href="./pages/suave.html"><img src="./assets/imgs/suave3.png" alt="Vinho Suave" class="img"><br>
+        <span class="item-titulo">1- Suave</span></a>
       </td>
       <td>
+        <a href="./pages/bordo.html">
         <img src="./assets/imgs/bordo.png" alt="Vinho Bordô"class="img"><br>
-        <span class="item-titulo"><a href="./pages/bordo.html">2- Bordô</a></span>
+        <span class="item-titulo">2- Bordô</span></a>
       </td>
       <td>
-        <img src="./assets/imgs/espumante.png" alt="Vinho Espumante" class="img"><br>
-        <span class="item-titulo"><a href="./pages/espumante.html">3- Espumante</a></span>
+        <a href="./pages/espumante.html"><img src="./assets/imgs/espumante.png" alt="Vinho Espumante" class="img"><br>
+        <span class="item-titulo">3- Espumante</span></a>
       </td>
       <td>
-        <img src="./assets/imgs/tinto.jpg" alt="Vinho Tinto" class="img"><br>
-        <span class="item-titulo"><a href="./pages/tinto.html">4- Tinto</a></span>
+        <a href="./pages/tinto.html"><img src="./assets/imgs/tinto.jpg" alt="Vinho Tinto" class="img"><br>
+        <span class="item-titulo">4- Tinto</span></a>
       </td>
       <td>
-        <img src="./assets/imgs/branco.png" alt="Vinho Branco" class="img"><br>
-        <span class="item-titulo"><a href="./pages/branco.html">5- Branco</a></span>
+        <a href="./pages/branco.html"><img src="./assets/imgs/branco.png" alt="Vinho Branco" class="img"><br>
+        <span class="item-titulo">5- Branco</span></a>
       </td>
     </tr>
   </table>
