--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -26,7 +26,7 @@
                 <a href="./safras.html">Safras</a>
                 <a href="#">Sobre Nós</a>
                 <a href="./harmonizacao.html">Harmonização</a>
-                <a href="discover.html">Guia de Vinhos<
+                <a href="discover.html">Guia de Vinhos</a>
                 <a href="./comprar.html">Comprar</a>
             </nav>
     </header>
