animando com mp4

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <span class="item-titulo">5- Branco</span></a>
       </td>
     </tr>
-  </table>
+  </table><br>
 
   <h3>Está perdido?</h3>
   Não se preocupe! Separamos uma seção para quem quer começar do mais completo zero! Por favor, acesse nosso <a href="./pages/discover.html">Guia de Vinhos</a>.
