--- a/pages/bordo.html
+++ b/pages/bordo.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="vinho bordô, vinho brasileiro, vinho tinto bordô, uva isabel, vinho doce, vinho frutado, vinhos tradicionais do Brasil">
 
   <title>Vinheiria Agnello</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/vinhos.css">
 </head>
 
 <body>
