--- a/pages/branco.html
+++ b/pages/branco.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="vinho branco, vinho suave, vinho fresco, harmonização frutos do mar, vinhos leves, vinhos aromáticos">
 
   <title>Vinheiria Agnello</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/vinhos.css">
 </head>
 
 <body>
@@ -34,11 +34,9 @@
 
   <main>
     <section class="texto-destaque">
-      <h2>Vinho Espumante</h2>
+      <h2>Vinho Branco</h2>
       <p>
-        O vinho espumante é conhecido por suas borbulhas e efervescência, resultado da
-        segunda fermentação que ocorre na garrafa. É uma escolha popular para celebrações
-        e ocasiões especiais, trazendo um toque de sofisticação a qualquer brinde.
+        O vinho branco é conhecido por sua frescura e leveza, sendo uma excelente opção para dias quentes. Ele harmoniza bem com frutos do mar, queijos leves e pratos delicados.
       </p>
       <p>
         Produzido a partir de diversas variedades de uvas, o espumante pode variar em
