--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="comprar vinhos online, loja de vinhos, vinhos brasileiros, comprar vinho tinto, comprar vinho branco, vinhos espumantes">
 
   <title>Comprar - Vinheiria Agnello</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/compras.css">
 </head>
 
 <body>
