--- a/pages/confirma.html
+++ b/pages/confirma.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/compras.css">
 </head>
 <body>
     <header>
@@ -25,14 +25,18 @@
       <a href="./comprar.html">Comprar</a>
     </nav>
   </header>
-  <main>
+  <main><center>
     <section>
-        <center><img src="../assets/imgs/check-correct.gif" alt="Confirmação de Pedido"><br>
+        <video autoplay muted playsinline controlslist="nodownload nofullscreen noremoteplayback" 
+        disablepictureinpicture class="video">
+        <source src="../assets/imgs/check-correct.mp4" type="video/mp4">
+  Seu navegador não suporta vídeo.
+</video>
             <h1>Confirmação de Pedido</h1>
             <p>Obrigado por sua compra! Seu pedido foi recebido com sucesso.</p>
             <p>Em breve, entraremos em contato para confirmar os detalhes do seu pedido.</p>
             voltar para a <a href="../index.html">página inicial</a>.
-  </main>
+</center>  </main>
   <footer>
     <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
   </footer>
