--- a/pages/espumante.html
+++ b/pages/espumante.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="espumante, vinho espumante, champanhe, celebrações, vinhos para festa, vinhos especiais, brindes">
 
   <title>Vinheiria Agnello</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/vinhos.css">
 </head>
 <body>
   <header>
