--- a/pages/tinto.html
+++ b/pages/tinto.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="vinho tinto, vinho seco, vinho encorpado, harmonização com carnes, vinho clássico, vinhos fortes">
 
   <title>Vinheiria Agnello</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/vinhos.css">
 </head>
 
 <body>
