--- a/pages/suave.html
+++ b/pages/suave.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="vinho suave, vinho leve, vinho doce, vinho tinto suave, vinhos para iniciantes, vinhos fáceis de beber">
 
   <title>Vinheiria Agnello</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/vinhos.css">
 </head>
 
 <body>
