--- a/pages/branco.html
+++ b/pages/branco.html
@@ -13,24 +13,23 @@
 
 <body>
   <header>
-    <a href="../index.html" class="link-container">
+        <a href="../index.html" class="link-container">
       <div class="logo-container">
 
         <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
         <h1>Vinheiria Agnello</h1>
 
       </div>
-    </a>
-    <nav>
-      
-      <a href="./categorias.html">Categorias</a>
-      <a href="./safras.html">Safras</a>
-      <a href="./sobre.html">Sobre Nós</a>
-      <a href="./harmonizacao.html">Harmonização</a>
-      <a href="./discover.html">Guia de Vinhos</a>
-      <a href="./comprar.html">Comprar</a>
-    </nav>
-  </header>
+        <nav>
+            
+            <a href="./categorias.html">Categorias</a>
+            <a href="./safras.html">Safras</a>
+            <a href="./sobre.html">Sobre Nós</a>
+            <a href="./harmonizacao.html">Harmonização</a>
+            <a href="./discover.html">Guia de Vinhos</a>
+            <a href="./comprar.html">Comprar</a>
+        </nav>
+    </header>
 
   <main>
     <section class="texto-destaque">
@@ -43,6 +42,8 @@
         sabor, desde os mais secos até os mais doces. Harmoniza bem com aperitivos,
         frutos do mar e pratos leves, sendo uma opção versátil para diferentes paladares.
       </p>
+      <img src="../assets/imgs/branco.png" alt="Vinho Branco" class="img">
+      <img src="../assets/imgs/branco2.jpg" alt="Vinho Branco" class="img">
 
     </section>
 
