--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="categorias de vinhos, tipos de vinho, vinhos tintos, vinhos brancos, espumantes, vinhos suaves, escolha de vinhos">
 
   <title>Categorias - Vinheiria Agnello</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/vinhos.css">
 </head>
 <body>
   <header>
