--- a/pages/safras.html
+++ b/pages/safras.html
@@ -43,6 +43,8 @@
             <p>Os apreciadores de vinho muitas vezes prestam atenção às safras ao escolher vinhos, especialmente para vinhos
                 de alta qualidade ou vinhos de guarda, onde a safra pode influenciar o valor e a reputação do vinho ao longo
                 do tempo.</p>
+                <img src="../assets/imgs/safras.jpg" alt="Safras de Vinho" class="img">
+                <img src="../assets/imgs/safras2.png" alt="Safras de Vinho" class="img">
         </section></main>
         <footer>
     <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
