--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -50,7 +50,7 @@
             </ul>
             <h3>conheca nosso armazenamento:   </h3>
             <img src="../assets/imgs/Adega.jpeg" alt="foto de uma adega de vinhos" class="img">
-            <img src="../assets/adega-7.jpg" alt="foto de outra adega de vinhos" class="img">
+            <img src="../assets/imgs/adega-7.jpg" alt="foto de outra adega de vinhos" class="img">
 
             <p>Explore nosso site para conhecer nossa seleção de vinhos, dicas de harmonização e eventos especiais.
                 Estamos aqui para ajudar você a descobrir o vinho perfeito para cada momento.</p>
