--- a/pages/tinto.html
+++ b/pages/tinto.html
@@ -13,20 +13,23 @@
 
 <body>
   <header>
-    <div class="logo-container">
-      <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
-      <h1>Vinheiria Agnello</h1>
-    </div>
-    <nav>
-      
-      <a href="./categorias.html">Categorias</a>
-      <a href="./safras.html">Safras</a>
-      <a href="./sobre.html">Sobre Nós</a>
-      <a href="./harmonizacao.html">Harmonização</a>
-      <a href="./discover.html">Guia de Vinhos</a>
-      <a href="./comprar.html">Comprar</a>
-    </nav>
-  </header>
+        <a href="../index.html" class="link-container">
+      <div class="logo-container">
+
+        <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
+        <h1>Vinheiria Agnello</h1>
+
+      </div>
+        <nav>
+            
+            <a href="./categorias.html">Categorias</a>
+            <a href="./safras.html">Safras</a>
+            <a href="./sobre.html">Sobre Nós</a>
+            <a href="./harmonizacao.html">Harmonização</a>
+            <a href="./discover.html">Guia de Vinhos</a>
+            <a href="./comprar.html">Comprar</a>
+        </nav>
+    </header>
 
   <main>
     <section class="texto-destaque">
@@ -43,6 +46,8 @@
         curados e massas com molhos encorpados. Cada safra e cada variedade de uva revelam
         novas nuances, fazendo do vinho tinto uma escolha clássica e inesquecível.
       </p>
+      <img src="../assets/imgs/tinto.jpg" alt="Vinho Tinto" class="img" ">
+  <img src="../assets/imgs/tinto2.jpeg" alt="Vinho Tinto" class="img">
     </section>
   </main>
   <footer>
