--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       </div>
       <nav>
         
-        <a href="./categorias.html">Categorias</a>
-        <a href="./safras.html">Safras</a>
-        <a href="./sobre.html">Sobre Nós</a>
-        <a href="./harmonizacao.html">Harmonização</a>
-        <a href="./discover.html">Guia de Vinhos</a>
-        <a href="./comprar.html">Comprar</a>
+        <a href="./pages/categorias.html">Categorias</a>
+        <a href="./pages/safras.html">Safras</a>
+        <a href="./pages/sobre.html">Sobre Nós</a>
+        <a href="./pages/harmonizacao.html">Harmonização</a>
+        <a href="./pages/discover.html">Guia de Vinhos</a>
+        <a href="./pages/comprar.html">Comprar</a>
       </nav>
   </header>
   <main>
