--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -14,21 +14,21 @@
 <body>
     <header>
         <a href="../index.html" class="link-container">
-            <div class="logo-container">
+      <div class="logo-container">
 
-                <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
-                <h1>Vinheiria Agnello</h1>
+        <img src="../assets/imgs/logo2.png" alt="garrafa de vinho" height="60" width="40">
+        <h1>Vinheiria Agnello</h1>
 
-            </div>
-            <nav>
-                
-                <a href="./categorias.html">Categorias</a>
-                <a href="./safras.html">Safras</a>
-                <a href="#">Sobre Nós</a>
-                <a href="./harmonizacao.html">Harmonização</a>
-                <a href="discover.html">Guia de Vinhos</a>
-                <a href="./comprar.html">Comprar</a>
-            </nav>
+      </div>
+        <nav>
+            
+            <a href="./categorias.html">Categorias</a>
+            <a href="./safras.html">Safras</a>
+            <a href="./sobre.html">Sobre Nós</a>
+            <a href="./harmonizacao.html">Harmonização</a>
+            <a href="./discover.html">Guia de Vinhos</a>
+            <a href="./comprar.html">Comprar</a>
+        </nav>
     </header>
     <br><br>
     <main>
