--- a/pages/bordo.html
+++ b/pages/bordo.html
@@ -47,7 +47,7 @@
         e afeto.
       </p>
       <img src="../assets/imgs/bordo2.jpg" alt="Vinho Bordô" class="img">
-      <img src="../assets/imgs/bordo3.JPG" alt="Vinho Bordô" class="img">
+      <img src="../assets/imgs/bordo3.jpg" alt="Vinho Bordô" class="img">
     </section>
 
   </main>
