--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -30,60 +30,64 @@
     </header>
 
   <main>
-    <section class="texto-destaque">
-      <h2>Categorias de Vinhos</h2>
-      <p>Conheça os principais estilos que fazem parte da nossa seleção.</p>
-    </section>
-
-    <section class="categoria">
+    <table class="tabela-categorias">
+  <tr>
+    <td class="categoria">
       <h3>🍷 Vinho Tinto</h3>
       <p>Intenso, marcante e clássico. Produzido a partir da fermentação com cascas, carrega aromas de frutas vermelhas e notas amadeiradas.</p>
-    </section>
-
-    <section class="categoria">
+    </td>
+    <td class="categoria">
       <h3>🥂 Vinho Espumante</h3>
       <p>Fresco, festivo e cheio de borbulhas. Ideal para celebrações e harmonizações leves.</p>
-    </section>
-
-    <section class="categoria">
+    </td>
+    <td class="categoria">
       <h3>🍇 Vinho Suave</h3>
       <p>Doce e delicado, conquista pelo sabor adocicado e pela facilidade de beber, ótimo para iniciantes no mundo dos vinhos.</p>
-    </section>
-
-    <section class="categoria">
+    </td>
+    <td class="categoria">
       <h3>🍾 Vinho Branco</h3>
       <p>Leve, refrescante e aromático, combina com pratos frescos, saladas e frutos do mar.</p>
-    </section>
-
-    <section class="categoria">
+    </td>
+  </tr>
+  <tr>
+    <td class="categoria">
       <h3>🍷 Vinho Bordô</h3>
       <p>Tradicional no Brasil, encorpado e vibrante, com notas frutadas e um toque levemente adocicado.</p>
-    </section>
-
-    <section class="categoria">
+    </td>
+    <td class="categoria">
       <h3>🌸 Vinho Rosé</h3>
       <p>Elegante e versátil, une a leveza do branco com a intensidade do tinto. Perfeito para dias quentes.</p>
-    </section>
-
-    <section class="categoria">
+    </td>
+    <td class="categoria">
       <h3>🌍 Vinho do Porto</h3>
       <p>Fortificado e adocicado, originário de Portugal. Ideal para acompanhar sobremesas e momentos especiais.</p>
-    </section>
-
-    <section class="categoria">
+    </td>
+    <td class="categoria">
       <h3>🍷 Vinho Malbec</h3>
       <p>Originário da França, mas consagrado na Argentina. Encorpado, de cor intensa e com aromas de ameixa e especiarias.</p>
-    </section>
-
-    <section class="categoria">
+    </td>
+  </tr>
+  <tr>
+    <td class="categoria">
       <h3>🍷 Vinho Cabernet Sauvignon</h3>
       <p>Um dos mais famosos do mundo. Estruturado, com notas de frutas escuras e excelente potencial de guarda.</p>
-    </section>
-
-    <section class="categoria">
+    </td>
+    <td class="categoria">
       <h3>🍷 Vinho Merlot</h3>
       <p>Macio e aveludado, agrada paladares diversos. Traz aromas de frutas vermelhas maduras e toque elegante.</p>
-    </section>
+    </td>
+     <td class="categoria">
+      <h3>🌶️ Vinho Syrah (Shiraz)</h3>
+      <p>Elegante e intenso, apresenta notas de especiarias, pimenta e frutas escuras. Ideal para carnes grelhadas e pratos condimentados.</p>
+    </td>
+    <td class="categoria">
+      <h3>🍍 Vinho Chardonnay</h3>
+      <p>Branco encorpado e aromático, com notas de frutas tropicais e toques amanteigados. Excelente para massas, aves e frutos do mar.</p>
+    </td>
+  </tr>
+</table>
+
+  </div>
   </main>
   <footer>
     <p>&copy; 2023 Vinheiria Agnello. Todos os direitos reservados.</p>
