--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -31,43 +31,35 @@
     </nav>
   </header>
 
-  <main>
-    <section class="texto-destaque">
-      <h2>Comprar Vinhos</h2>
-      <p>Confira os valores e preencha o formulário para reservar seu vinho favorito.</p>
-    </section>
+  <main><main>
+  <section class="texto-destaque">
+    <h2>Comprar Vinhos</h2>
+    <p>Confira os valores e preencha o formulário para reservar seu vinho favorito.</p>
+  </section>
 
-    <div class="compra-container">
-      <!-- FORMULÁRIO -->
-      <div class="form-compras">
-        <fieldset>
-          <legend>
-            <h3>Formulário de Compra</h3>
-          </legend>
-          <form action="./confirma.html" method="get">
-            <label for="nome">Nome:</label><br>
-            <input type="text" id="nome" name="nome" required><br><br>
+  <div class="compra-container">
+    <div class="compra-bloco">
+      <h3>Formulário de Compra</h3>
+      <form class="form-compras" method="get" action="./confirma.html">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome">
 
-            <label for="telefone">Telefone:</label><br>
-            <input type="tel" id="telefone" name="telefone" required><br><br>
+        <label for="telefone">Telefone:</label>
+        <input type="tel" id="telefone">
 
-            <label for="pagamento">Forma de pagamento:</label><br>
-            <input type="radio" id="pix" name="pagamento" value="pix" >
-            <label for="pix">PIX</label><br>
+        <label>Forma de pagamento:</label>
+        <div class="opcoes-pagamento">
+          <label><input type="radio" name="pagamento" value="pix"> PIX</label>
+          <label><input type="radio" name="pagamento" value="cartao"> Cartão de Crédito</label>
+          <label><input type="radio" name="pagamento" value="boleto"> Boleto Bancário</label>
+          <label><input type="radio" name="pagamento" value="paypal"> PayPal</label>
+        </div>
 
-            <input type="radio" id="cartao" name="pagamento" value="cartao">
-            <label for="cartao">Cartão de Crédito</label><br>
+        <label for="email">E-mail:</label>
+        <input type="email" id="email">
 
-            <input type="radio" id="boleto" name="pagamento" value="boleto">
-            <label for="boleto">Boleto Bancário</label><br>
-
-            <input type="radio" id="paypal" name="pagamento" value="paypal">
-            <label for="paypal">PayPal</label><br><br>
-
-            <label for="email">E-mail:</label><br>
-            <input type="email" id="email" name="email" required><br><br>
-
-            <label for="vinho">Selecione seu vinho:</label><br>
+        
+         <label for="vinho">Selecione seu vinho:</label><br>
             <select id="vinho" name="vinho" required>
               <option value="">-- Escolha --</option>
               <option value="suave">Suave - R$ 45,00</option>
@@ -82,77 +74,15 @@
               <option value="merlot">Merlot - R$ 70,00</option>
             </select><br><br>
 
-            <button type="submit">Enviar Pedido</button>
-          </form>
-        </fieldset>
-      </div>
-
-      <!-- TABELA -->
-      <div class="tabela-vinhos">
-        <h3>Detalhes dos Vinhos</h3>
-        <table>
-          <thead>
-            <tr>
-              <th>Vinho</th>
-              <th>Tipo</th>
-              <th>Preço</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Suave</td>
-              <td>Tinto</td>
-              <td>R$ 45,00</td>
-            </tr>
-            <tr>
-              <td>Bordô</td>
-              <td>Tinto</td>
-              <td>R$ 50,00</td>
-            </tr>
-            <tr>
-              <td>Espumante</td>
-              <td>Branco</td>
-              <td>R$ 70,00</td>
-            </tr>
-            <tr>
-              <td>Tinto</td>
-              <td>Seco</td>
-              <td>R$ 60,00</td>
-            </tr>
-            <tr>
-              <td>Branco</td>
-              <td>Suave</td>
-              <td>R$ 55,00</td>
-            </tr>
-            <tr>
-              <td>Rosé</td>
-              <td>Leve</td>
-              <td>R$ 58,00</td>
-            </tr>
-            <tr>
-              <td>Vinho do Porto</td>
-              <td>Fortificado</td>
-              <td>R$ 95,00</td>
-            </tr>
-            <tr>
-              <td>Malbec</td>
-              <td>Tinto</td>
-              <td>R$ 75,00</td>
-            </tr>
-            <tr>
-              <td>Cabernet Sauvignon</td>
-              <td>Tinto</td>
-              <td>R$ 80,00</td>
-            </tr>
-            <tr>
-              <td>Merlot</td>
-              <td>Tinto</td>
-              <td>R$ 70,00</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+        <button type="submit">Enviar Pedido</button>
+      </form>
     </div>
+
+    
+    </div>
+  </div>
+</main>
+
   </main>
 <br><br><br>
   <footer>
