--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <span class="item-titulo">4- Tinto</span></a>
       </td>
       <td>
-        <a href="./pages/branco.html"><img src="./assets/imgs/branco.png" alt="Vinho Branco" class="img"><br>
+        <a href="./pages/branco.html"><img src="./assets/imgs/branco.png" alt="Vinho Branco" class="img" class=""><br>
         <span class="item-titulo">5- Branco</span></a>
       </td>
     </tr>
