--- a/pages/tinto.html
+++ b/pages/tinto.html
@@ -46,7 +46,7 @@
         curados e massas com molhos encorpados. Cada safra e cada variedade de uva revelam
         novas nuances, fazendo do vinho tinto uma escolha clássica e inesquecível.
       </p>
-      <img src="../assets/imgs/tinto.jpg" alt="Vinho Tinto" class="img" ">
+      <img src="../assets/imgs/tinto.jpg" alt="Vinho Tinto" class="img">
   <img src="../assets/imgs/tinto2.jpeg" alt="Vinho Tinto" class="img">
     </section>
   </main>
