--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -74,7 +74,7 @@
               <option value="merlot">Merlot - R$ 70,00</option>
             </select><br><br>
 
-        <button type="submit">Enviar Pedido</button>
+        <center><button type="submit">Enviar Pedido</button></center>
       </form>
     </div>
 
