--- a/pages/suave.html
+++ b/pages/suave.html
@@ -46,8 +46,8 @@
         vinícola de muitas famílias produtoras, sendo uma escolha cheia de história
         e afeto.
       </p>
-      <img src="../assets/imgs/Galiotto.jpg" alt="Vinho Suave" class="img">
       <img src="../assets/imgs/suave3.png" alt="Vinho Suave" class="img">
+      <img src="../assets/imgs/suave2.png" alt="Vinho Suave" class="img">
     </section>
   </main>
   <footer>
